<resources>
    <string name="app_name">Barbershop</string>
    <string name="barbershop">Barbershop</string>
    <string name="description">We guarantee high quality and stylish haircut</string>
    <string name="signin">Sign in</string>
    <string name="signup">Sign up</string>
    <string name="admin">Admin</string>
    <string name="manager">Manager</string>
    <string name="user">User</string>
    <string name="whoru">Who are you?</string>
    <string name="password">Password</string>
    <string name="repeatpassword">Repeat password</string>
    <string name="menu">Menu</string>
    <string name="profile">Profile</string>
    <string name="view">View information</string>
    <string name="login">Login</string>
    <string name="role">Role</string>
    <string name="vip">VIP</string>
    <string name="blocked">Blocked</string>
    <string name="back">Back</string>
    <string name="signout">Sign out</string>
    <string name="prices">Prices</string>
    <string name="users">Users</string>
    <string name="block">Block</string>
    <string name="unblock">Unblock</string>
    <string name="edit">Edit</string>
    <string name="editUsers">Edit users</string>
    <string name="editServices">Edit services</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="services">Services</string>
    <string name="surname">Surname</string>
    <string name="email">Email</string>
    <string name="phoneNumber">Phone number</string>
    <string name="name">Name</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="id">ID</string>
    <string name="delete">Delete</string>
    <string name="price">Price</string>
    <string name="minutes">Minutes</string>
    <string name="menu_home">Users</string>
    <string name="menu_gallery">Services</string>
    <string name="close">Close</string>
    <string name="type">Type</string>
    <string name="VIP">VIP</string>
    <string-array name="roleSpinner">
        <item>admin</item>
        <item>manager</item>
        <item>user</item>
    </string-array>
    <string-array name="blockedSpinner">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string-array name="VIPSpinner">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string name="chooseId">Choose user to edit</string>
    <string name="chooseId2">Choose service to edit</string>
</resources>