<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">
    <ScrollView
        android:layout_width="412dp"
        android:layout_height="731dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">
        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:columnCount="5"
            android:orientation="horizontal">

            <ListView
                android:id="@+id/listView_users"
                android:layout_width="match_parent"
                android:layout_height="471dp"
                android:layout_row="1"
                android:layout_columnSpan="5"></ListView>
            <Button
                android:id="@+id/button19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search"
                android:layout_margin="10dp"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_marginTop="110dp"/>

            <Button
                android:id="@+id/button21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:layout_column="2"
                android:layout_margin="10dp"
                android:layout_row="0"
                android:layout_marginTop="110dp"/>

            <Button
                android:id="@+id/button20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit"
                android:layout_margin="10dp"
                android:layout_row="0"
                android:layout_column="3"
                android:layout_marginTop="110dp"/>
            <Button
                android:id="@+id/button24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/close"
                android:layout_margin="10dp"
                android:layout_row="2"
                android:layout_column="4"/>
            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/main_frag_container_2"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_row="3"
                android:layout_columnSpan="5"/>

            <TextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="0"
                android:text="-1" />

            <TextView
                android:id="@+id/textView28"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="2"
                android:layout_columnSpan="2"
                android:textColor="#FF0000" />
        </GridLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>